# xbot

./: .flake8  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  CONTRIBUTING.en_US.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  CONTRIBUTING.zh-cn.md  Makefile  README.en_US.md  README.md  README.zh-CN  README.zh-CN.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: coverage.yml  greetings.yml  tests.yml
data/crosswoz/data_process/: nlu-preprocess.py  nlu_dataloader.py  nlu_intent_dataloader.py  nlu_intent_postprocess.py  nlu_intent_preprocess.py  nlu_postprocess.py  nlu_preprocess.py  nlu_slot_dataloader.py  nlu_slot_postprocess.py  nlu_slot_preprocess.py  nlu_slot_preprocessing.py  readable-preprocess.py  readable_preprocess.py
data/crosswoz/database/: attraction_db.json  hotel_db.json  metro_db.json  restaurant_db.json  taxi_db.json
data/crosswoz/nlu_intent_data/: intent_vocab.json  tag_vocab.json
data/crosswoz/nlu_joint_data/: tag_vocab.json
data/crosswoz/nlu_slot_data/: intent_vocab.json  tag_vocab.json
docs/: .gitignore  INDEX.md  docusaurus.config.js  package.json  pydoc-markdown.yml  sidebars.js
docs/docs/: greeting.md  guide.md  installation.md  introduction.md
docs/docs/reference/: sidebar.json
docs/scripts/: compile_program_outputs.js  compile_variables.js
docs/src/css/: custom.css
docs/src/pages/: index.jsx
script/dst/bert/: README.md  train.py  utils.py
script/dst/trade/: README.md  train.py  utils.py
script/nlg/: evaluate.py  nlg_template_evaluate.py
script/nlu/intent/: nlu_intent_test.py  nlu_intent_train.py
script/nlu/joint/: nlu_joint_test.py  nlu_joint_train.py  nlu_test.py  nlu_train.py
script/nlu/slot/: nlu_slot_test.py  nlu_slot_train.py  slot__test.py  slot_test.py  slot_train.py
script/policy/: rule_test.py  train.py  utils.py
script/policy/bert/: train.py  utils.py
script/policy/mle/: train.py  utils.py
script/policy/rule/: rule_test.py
src/xbot/: __init__.py  builder.py  chatbot.py  component.py  config.py  constants.py  exceptions.py  language.py  manager.py  model.py  pipeline.py  registry.py  utterance.py
src/xbot/cli/: __init__.py  commands.py
src/xbot/data/: __init__.py
src/xbot/dm/: __init__.py  intervention.py
src/xbot/nlg/: nlg_with_template.py
src/xbot/nlu/: __init__.py  component.py  constants.py  pipeline.py  translator.py
src/xbot/util/: allennlp_file_utils.py  colored.py  common.py  config.py  db_query.py  download.py  dst_util.py  file_util.py  io.py  log.py  module.py  nlg_util.py  nlu_util.py  path.py  state.py  (+1 more)
tests/: test_cli.py  test_cli_command.py
tests/cli/: __init__.py  test_cli_command_succeed.py
tests/config/: test_config.py
tests/util/: test_config.py
xbot/: chatbot.py  constants.py  exception.py  exceptions.py  gl.py  model.py  pipeline.py
xbot/cli/: __init__.py
xbot/configs/: crosswoz_all_context.json  crosswoz_all_context_nlu_intent.json  crosswoz_all_context_nlu_slot.json
xbot/dm/: intervention.py
xbot/nlg/: nlg_with_template.py
xbot/nlu/: __init__.py  pipeline.py  sequence_detect.py  translator.py
xbot/util/: allennlp_file_utils.py  db_query.py  download.py  dst_util.py  file_util.py  nlg_util.py  nlu_util.py  path.py  policy_util.py  state.py  train_util.py
(+109 files in other folders)
