[tool.poetry]
name = "xbot"
version = "0.1.0"
description = ""
authors = ["zhangchunyang <zhangchunyang_pri@126.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pytype = {version = "^2020.12.2", python = "3.8"}
importlib-metadata = {version = "^3.1.1", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.790"
pytype = {version = "^2020.12.2", python = "3.8"}
typeguard = "^2.10.0"
flake8-annotations = "^2.4.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.8"
xdoctest = "^0.15.0"
Sphinx = "^3.3.1"
sphinx-autodoc-typehints = "^1.11.1"
codecov = "^2.1.10"
tox = "^3.20.1"
nox = "^2020.8.22"
pre-commit = "^2.9.3"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.poetry.scripts]
xbot = "src.xbot.cli:main"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
